--- a/source/fpreport2src/fpr2src_Reader.lpi
+++ b/source/fpreport2src/fpr2src_Reader.lpi
@@ -6,7 +6,7 @@
     <General>
       <SessionStorage Value="InProjectDir"/>
       <MainUnit Value="0"/>
-      <Title Value="fpr2src"/>
+      <Title Value="fpr2src_Reader"/>
       <Scaled Value="True"/>
       <ResourceType Value="res"/>
       <UseXPManifest Value="True"/>
@@ -22,7 +22,7 @@
           <Version Value="11"/>
           <PathDelim Value="\"/>
           <Target>
-            <Filename Value="fpr2src"/>
+            <Filename Value="bin\fpr2src_Reader"/>
           </Target>
           <SearchPaths>
             <IncludeFiles Value="$(ProjOutDir)"/>
@@ -66,7 +66,7 @@
     </RequiredPackages>
     <Units Count="4">
       <Unit0>
-        <Filename Value="fpr2src.lpr"/>
+        <Filename Value="fpr2src_Reader.lpr"/>
         <IsPartOfProject Value="True"/>
       </Unit0>
       <Unit1>
@@ -90,7 +90,7 @@
     <Version Value="11"/>
     <PathDelim Value="\"/>
     <Target>
-      <Filename Value="bin\fpr2src"/>
+      <Filename Value="bin\fpr2src_Reader"/>
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir)"/>
