fix Copyright Next try with a special reader and overloading of all reportscomponents

--- a/source/fpreport2src/fpr2src_Reader.lpi
+++ b/source/fpreport2src/fpr2src_Reader.lpi
@@ -64,26 +64,18 @@
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="4">
+    <Units Count="2">
       <Unit0>
         <Filename Value="fpr2src_Reader.lpr"/>
         <IsPartOfProject Value="True"/>
       </Unit0>
       <Unit1>
-        <Filename Value="fpr2src_main.pas"/>
+        <Filename Value="fpr2src_reader_main.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="Frmfpr2src"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
       </Unit1>
-      <Unit2>
-        <Filename Value="fpr2srcstreamer.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit2>
-      <Unit3>
-        <Filename Value="fpr2srcreport.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit3>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
