--- a/source/99_fpreport2src/fpr2src_dsgctrl.lpi
+++ b/source/99_fpreport2src/fpr2src_dsgctrl.lpi
@@ -56,16 +56,19 @@
       <FormatVersion Value="2"/>
       <Modes Count="0"/>
     </RunParams>
-    <RequiredPackages Count="3">
+    <RequiredPackages Count="4">
       <Item1>
-        <PackageName Value="lazfpreportdesign"/>
+        <PackageName Value="lazmrumenu"/>
       </Item1>
       <Item2>
-        <PackageName Value="fpreportdebug"/>
+        <PackageName Value="lazfpreportdesign"/>
       </Item2>
       <Item3>
         <PackageName Value="LCL"/>
       </Item3>
+      <Item4>
+        <PackageName Value="FCL"/>
+      </Item4>
     </RequiredPackages>
     <Units Count="3">
       <Unit0>
